--- a/languages/en_US.po
+++ b/languages/en_US.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Sumdu v1.0\n"
-"POT-Creation-Date: 2017-03-23 00:23+0200\n"
-"PO-Revision-Date: 2017-03-23 00:33+0200\n"
+"POT-Creation-Date: 2017-05-10 16:23+0300\n"
+"PO-Revision-Date: 2017-05-10 17:12+0300\n"
 "Last-Translator: Oleh Kopytsia <lyboleg@gmail.com>\n"
 "Language-Team: Sumdu <lyboleg@gmail.com>\n"
 "Language: en\n"
@@ -25,6 +25,10 @@ msgstr "Author"
 #: ../single.php:17
 msgid "Дата публікації"
 msgstr "Date of publication"
+
+#: ../category.php:30 ../index.php:30
+msgid "Ще не було жодного запису."
+msgstr "There have not been any entries yet."
 
 #: ../comments.php:9
 msgid "Ім'я"
@@ -88,6 +92,14 @@ msgstr ""
 "You may use these <abbr title=\"HyperText Markup Language\">HTML</abbr> tags "
 "and attributes: %s"
 
+#: ../footer.php:32
+msgid "Факультет електроніки та інформаційних технологій"
+msgstr "Department of Electronics and Information Technology"
+
+#: ../footer.php:34
+msgid "Сумський Державний Університет"
+msgstr "Sumy State University"
+
 #: ../functions.php:14
 msgid "Ліва бічна панель"
 msgstr "Left sidebar"
@@ -113,9 +125,13 @@ msgstr "%1$s at %2$s"
 msgid "Редагувати"
 msgstr "Edit"
 
-#: ../index.php:30
-msgid "Ще не було жодного запису."
-msgstr "There have not been any entries yet."
+#: ../functions.php:119
+msgid "База даних"
+msgstr "Database"
+
+#: ../functions.php:131
+msgid "Система оповіщення"
+msgstr "Warning system"
 
 #: ../search.php:7
 #, php-format
