--- a/languages/ru_RU.po
+++ b/languages/ru_RU.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Sumdu v1.0\n"
-"POT-Creation-Date: 2017-05-14 22:12+0300\n"
-"PO-Revision-Date: 2017-05-14 22:15+0300\n"
+"POT-Creation-Date: 2017-06-09 00:28+0300\n"
+"PO-Revision-Date: 2017-06-09 00:30+0300\n"
 "Last-Translator: Oleh Kopytsia <lyboleg@gmail.com>\n"
 "Language-Team: Sumdu <lyboleg@gmail.com>\n"
 "Language: ru\n"
@@ -15,16 +15,6 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-SearchPath-0: ..\n"
-
-#: ../category.php:16 ../index.php:16 ../page.php:16 ../search.php:30
-#: ../single.php:16
-msgid "Автор"
-msgstr "Автор"
-
-#: ../category.php:17 ../index.php:17 ../page.php:17 ../search.php:31
-#: ../single.php:17
-msgid "Дата публікації"
-msgstr "Дата публикации"
 
 #: ../category.php:30 ../index.php:30
 msgid "Ще не було жодного запису."
@@ -135,13 +125,25 @@ msgstr "База данных"
 msgid "Система оповіщення"
 msgstr "Система оповещения"
 
-#: ../functions.php:318
+#: ../functions.php:316
 msgid "Графік захистів дипломних робіт"
 msgstr "График защит дипломных работ"
 
-#: ../functions.php:339
+#: ../functions.php:337
 msgid "Робоча таблиця"
 msgstr "Рабочая таблица"
+
+#: ../functions.php:553
+msgid "Інформація та файли"
+msgstr "Информация и файлы"
+
+#: ../header.php:26
+msgid "Увійти"
+msgstr "Войти"
+
+#: ../header.php:27
+msgid "Зареєструватися"
+msgstr "Зарегистрироваться"
 
 #: ../list_themes/list_themes_bachelor.php:15
 #: ../list_themes/list_themes_master.php:15
@@ -177,6 +179,14 @@ msgstr "Руководитель"
 #: ../protection_schedule/list_protection_schedule_m.php:27
 msgid "Рецензент"
 msgstr "Рецензент"
+
+#: ../page.php:17 ../single.php:17
+msgid "Автор"
+msgstr "Автор"
+
+#: ../page.php:18 ../single.php:18
+msgid "Дата публікації"
+msgstr "Дата публикации"
 
 #: ../protection_schedule/list_protection_schedule_b.php:22
 #: ../protection_schedule/list_protection_schedule_m.php:22
